--- a/styles/main.css
+++ b/styles/main.css
@@ -8,9 +8,14 @@
 .form-all {
   font-family: "Lucida Grande", sans-serif;
 }
-.form-all {
-  width: 690px;
-}
+    .form-all{
+        margin:0px auto;
+        padding-top:0px;
+        width:690px;
+        color:#555 !important;
+        font-family:"Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Verdana, sans-serif;
+        font-size:14px;
+    }
 .form-label-left,
 .form-label-right {
   width: 150px;
