--- a/styles/main.css
+++ b/styles/main.css
@@ -2,12 +2,14 @@
 
 .container {
   display: table;
+  width: 100%;
 }
 .row {
   display: table-row;
 }
 .column {
   display: table-cell;
+  padding: 0px 10px;
 }
 
 .form-all:after {
