--- a/styles/main.css
+++ b/styles/main.css
@@ -263,7 +263,7 @@ h2 ~ .form-subHeader {
 .form-header-group {
   text-align: left;
 }
-/*.form-dropdown,
+.form-dropdown,
 .form-radio-item,
 .form-checkbox-item,
 .form-radio-other-input,
