--- a/styles/main.css
+++ b/styles/main.css
@@ -263,11 +263,12 @@ h2 ~ .form-subHeader {
 .form-header-group {
   text-align: left;
 }
-.form-dropdown,
+/*.form-dropdown,
 .form-radio-item,
 .form-checkbox-item,
 .form-radio-other-input,
 .form-checkbox-other-input,*/
+.form-dropdown,
 .form-captcha input,
 .form-spinner input,
 .form-error-message {
