--- a/styles/main.css
+++ b/styles/main.css
@@ -91,6 +91,7 @@
     -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.1);
     box-shadow: 0 3px 9px rgba(0, 0, 0, 0.1);
+    width: max-content;
   }
 }
 /* | */
