--- a/styles/main.css
+++ b/styles/main.css
@@ -23,7 +23,7 @@
     .form-all{
         margin:0px auto;
         padding-top:0px;
-        width:690px;
+        width:auto;
         color:#555 !important;
         font-family:"Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Verdana, sans-serif;
         font-size:14px;
