--- a/styles/main.css
+++ b/styles/main.css
@@ -87,10 +87,12 @@
 /* | */
 @media screen and (min-width: 480px) {
   .supernova .form-all {
-    border: 1px solid #dcdcdc;
+/*    border: 1px solid #dcdcdc;
     -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.1);
-    box-shadow: 0 3px 9px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 3px 9px rgba(0, 0, 0, 0.1);*/
+  background-color: #ffffff;
+  border: 1px solid transparent;
   }
 }
 /* | */
@@ -136,12 +138,12 @@
 /* | */
 .supernova .form-all,
 .form-all {
-    border: 1px solid #dcdcdc;
+/*    border: 1px solid #dcdcdc;
     -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.1);
-    box-shadow: 0 3px 9px rgba(0, 0, 0, 0.1);
-/*  background-color: #ffffff;
-  border: 1px solid transparent;*/
+    box-shadow: 0 3px 9px rgba(0, 0, 0, 0.1);*/
+  background-color: #ffffff;
+  border: 1px solid transparent;
 }
 .form-header-group {
   border-color: #e6e6e6;
