--- a/styles/main.css
+++ b/styles/main.css
@@ -487,7 +487,7 @@ li[data-type="control_image"] img {
   }
   .form-line,
   .form-line.form-line-column {
-    padding: 2% 5%;
+    padding: 2px 5px;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
