--- a/styles/main.css
+++ b/styles/main.css
@@ -402,8 +402,7 @@ li[data-type="control_image"] img {
     max-height: 65vh;
   }
 }
-@media screen and (max-width: 480px), 
-        screen and (max-device-width: 767px) and (orientation: landscape) {
+@media screen and (max-device-width: 767px) and (orientation: landscape) {
   .testOne {
     letter-spacing: 0;
   }
