--- a/styles/main.css
+++ b/styles/main.css
@@ -401,6 +401,21 @@ li[data-type="control_image"] img {
     overflow: auto;
     max-height: 65vh;
   }
+  .form-section, .form-section-closed {
+    list-style:none;
+    list-style-position:outside;
+    position:relative;
+    zoom:1;
+    clear:both;
+    padding:0;
+  }
+  .form-all {
+  background-color: #ffffff;
+  border: 1px solid transparent;
+/*    border: 0;*/
+    width: 96%!important;
+    max-width: initial;
+  }
 }
 @media screen and (max-device-width: 767px) and (orientation: landscape) {
   .testOne {
