--- a/styles/main.css
+++ b/styles/main.css
@@ -129,7 +129,7 @@
     width: 40%;
   }
 	
-@media screen and (max-width: 768px)
+/*@media screen and (max-width: 768px)
 	and (max-device-width: 1023px)
 	and (orientation: portrait) {
   div.ex3 {
@@ -144,7 +144,20 @@
     overflow: auto;
     max-height: 30vh;
   }
+}*/
+	
+@media screen and (orientation: portrait) {
+  div.ex3 {
+    overflow: auto;
+    max-height: 50vh;
+  }
 }
+@media screen and (orientation: landscape) {
+  div.ex3 {
+    overflow: auto;
+    max-height: 30vh;
+  }
+}	
 
 /* | */
 .supernova .form-all,
@@ -395,7 +408,7 @@ li[data-type="control_image"] img {
 	and (orientation: portrait) {
   div.ex3 {
     overflow: auto;
-    max-height: 60vh;
+    max-height: 65vh;
   }
 }
 @media screen and (max-width: 480px)
@@ -406,6 +419,7 @@ li[data-type="control_image"] img {
     max-height: 30vh;
   }
 }
+
 @media screen and (max-width: 480px) {
   .testOne {
     letter-spacing: 0;
