--- a/styles/main.css
+++ b/styles/main.css
@@ -79,11 +79,7 @@
 .supernova body {
   background-color: transparent;
 }
-/*
-@width30: (unit(@formWidth, px) + 60px);
-@width60: (unit(@formWidth, px)+ 120px);
-@width90: (unit(@formWidth, px)+ 180px);
-*/
+/* | */
 /* | */
 @media screen and (min-width: 480px) {
   .supernova .form-all {
@@ -94,29 +90,17 @@
   background-color: #ffffff;
   border: 1px solid transparent;
   }
-}
-/* | */
-/* | */
-@media screen and (max-width: 480px) {
-  .jotform-form {
-    padding: 10px 0;
+  div.ex3 {
+    overflow: auto;
+    max-height: 50vh;
   }
 }
 /* | */
-/* | */
-@media screen and (min-width: 480px and max-width: 767px) {
-  .jotform-form {
-    padding: 30px 0;
+@media screen and (min-width: 480px and orientation: landscape) {
+  div.ex3 {
+    max-height: 30vh;
   }
 }
-/* | */
-/* | */
-@media screen and (min-width: 480px and max-width: 689px) {
-  .jotform-form {
-    padding: 30px 0;
-  }
-}
-/* | */
 /* | */
 @media screen and (min-width: 768px) {
   .jotform-form {
@@ -128,39 +112,18 @@
   .form-buttons-wrapper button {
     width: 40%;
   }
-	
-/*@media screen and (max-width: 768px)
-	and (max-device-width: 1023px)
-	and (orientation: portrait) {
   div.ex3 {
     overflow: auto;
     max-height: 50vh;
-  }
-}
-@media screen and (max-width: 768px)
-	and (max-device-width: 1023px)
-	and (orientation: landscape) {
-  div.ex3 {
-    overflow: auto;
-    max-height: 30vh;
-  }
-}*/
-	
-@media screen and (max-width: 767px
-	and orientation: portrait) {
-  div.ex3 {
-    overflow: auto;
-    max-height: 50vh;
-  }
-}
-@media screen and (max-width: 767px
-	and orientation: landscape) {
-  div.ex3 {
-    overflow: auto;
-    max-height: 30vh;
   }
 }	
-
+/* | */
+@media screen and (min-width: 768px and orientation: landscape) {
+  div.ex3 {
+    max-height: 30vh;
+  }
+}
+/* | */
 /* | */
 .supernova .form-all,
 .form-all {
@@ -405,23 +368,6 @@ li[data-type="control_image"] img {
   display: none;
 }
 /* | */
-@media screen and (max-width: 480px
-	and max-device-width: 767px
-	and orientation: portrait) {
-  div.ex3 {
-    overflow: auto;
-    max-height: 65vh;
-  }
-}
-@media screen and (max-width: 480px
-	and max-device-width: 767px
-	and orientation: landscape) {
-  div.ex3 {
-    overflow: auto;
-    max-height: 30vh;
-  }
-}
-
 @media screen and (max-width: 480px) {
   .testOne {
     letter-spacing: 0;
