--- a/styles/main.css
+++ b/styles/main.css
@@ -12,8 +12,13 @@ div.ex3 {
     overflow: auto;
     max-height: 65vh;
   }
-.row {
+/*.row {
   display: table-row;
+}
+*/.row::after {
+    content: "";
+    clear: both;
+    display: table;
 }
 .column {
   display: table-cell;
