--- a/styles/main.css
+++ b/styles/main.css
@@ -16,6 +16,9 @@
   display: table;
   width: 100%;
 }
+div.ex2 {
+    overflow-x: hidden;
+  }
 div.ex3 {
     overflow: auto;
     max-height: 58vh;
