--- a/styles/main.css
+++ b/styles/main.css
@@ -138,7 +138,7 @@ div.ex3 {
 /* | */
 @media screen and (min-width: 1024px) {
   .jotform-form {
-    padding: 20px 0;
+    padding: 0px 40px;
   }
   .form-header-group {
     padding: 0;
