--- a/styles/main.css
+++ b/styles/main.css
@@ -147,7 +147,7 @@ div.ex3 {
     width: 40%;
   }
 }	
-@media screen and (min-width: 768px and orientation: landscape) {
+@media screen and (min-width: 1024px) and (orientation: landscape) {
   .col-1 {width: 33.33%;}
   .col-2 {width: 33.33%;}
   .col-3 {width: 33.33%;}
